feat(pwa): show other-side gift count badge; improve manifest start_url and PWA flags

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,8 +2,9 @@
   "name": "ClanTip - Digital Value Gifting",
   "short_name": "ClanTip",
   "description": "Send support vouchers and gifts to loved ones across Africa. Redeem whenever you need it.",
-  "start_url": "/splash",
+  "start_url": "/",
   "scope": "/",
+  "prefer_related_applications": false,
   "display": "standalone",
   "orientation": "portrait-primary",
   "background_color": "#ffffff",
