--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "^15.1.0",
     "postcss": "^8.4.32",
     "qrcode": "^1.5.4",
+    "jsqr": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
