--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
     "firebase": "^10.7.2",
+    "jsqr": "^1.4.0",
+    "lottie-web": "^5.13.0",
     "lucide-react": "^0.294.0",
     "next": "^15.1.0",
     "postcss": "^8.4.32",
     "qrcode": "^1.5.4",
-    "jsqr": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
